<resources>
    <string name="app_name">耳动城</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">耳动新天地</string>
    <string name="nav_header_subtitle">欢迎来到动新天地</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">耳动城</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">特价产品</string>

    <string name="home_second">Home Second</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">高端品牌</string>
    <string name="title_notifications">特价产品</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">耳机品牌</string>
    <string name="earname">耳机名称</string>
    <string name="sellingtime">售出时间</string>
    <string name="price">耳机价格</string>
    <string name="info">耳机介绍</string>
    <string name="picture">耳机图片:</string>
    <string name="save">保存</string>
    <string name="clear">清空</string>
    <string name="exit">退出</string>

</resources>
